# typed-python-starter

./: .gitignore  README.md  pyproject.toml
src/typed_app/: __init__.py  functions.py  main.py  models.py
src/typed_app/.ipynb_checkpoints/: main-checkpoint.py
tests/: test_matrix.py
